# computer_vision_learning

./: .gitignore  .gitmodules  Dockerfile  GUI.py  Makefile  Makefile2  Makefile4raspi  README.md  build_utils.py  index.py  label_config.py  pca.pkl  pyproject.toml  requirements.txt  settings.json  urls.md
.devcontainer/: devcontainer.json
assets/: settings.json
code/: deep_stack_var.py  labeling_scene.py  main.py  random_video_access.py  record_video.py  take_picture.py  video_to_3d_positions.py  vutils.py
model/000/: fingerprint.pb  info.txt  keras_metadata.pb  saved_model.pb
model/001/: fingerprint.pb  info.txt  saved_model.pb
model/010/: fingerprint.pb  info.txt  saved_model.pb
model/011/: fingerprint.pb  info.txt  saved_model.pb
model/100/: fingerprint.pb  info.txt  saved_model.pb
model/101/: fingerprint.pb  info.txt  keras_metadata.pb  saved_model.pb
model/110/: fingerprint.pb  info.txt  keras_metadata.pb  saved_model.pb
model/111/: fingerprint.pb  info.txt  keras_metadata.pb  saved_model.pb
model/1681684652/: history.csv  model.h5
model/1681684726/: history.csv  info.txt  model.h5
raspi/: Makefile4raspi  download_utils.py
src/: LSTM.py  convert.py  debug.py  download_utils.py  get_frames.py  hand.py  labeling_scene.py  main.py  mutils.py  pca.py  predict.py  preprocessor.py  record_video.py  take_picture.py  test.py  train.py  video_to_3d_positions.py  vutils.py
src/nn/: LSTM.py  (+3 more)
test_results/: 1680485881.csv  1680593527.csv  1680992817.csv  1681024842.csv  1683632665.csv  FrontView.csv  SideView.csv  test0unstable-test1stable.csv
(+78 files in other folders)
