[tool.poetry]
name = "computer-vision-learning"
version = "0.1.0"
description = ""
authors = ["Ruoqi Huang <huangruoqi374@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0.68"
mediapipe = "^0.9.0.1"
pandas = "^1.5.3"
pygame = "^2.1.2"
pims = "^0.6.1"
imageio = "^2.25.0"
av = "^10.0.0"
psutil = "^5.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
